# ParaLab

./: CMakeLists.txt  runcmake.bat  settings.cmake  settings_local.cmake
py/: gl_widget.py  pypara.ini  pypara.py  qt_gui.py
py/qt_builder/: __init__.py  custom_widgets.py  ui_builder.py
pyparalab/: CMakeLists.txt
pyscripts/: options.py  options_local2.py  test.py
src/: CMakeLists.txt
src/mesh/: ep_base.h  ep_facet.h  ep_halfedge.h  ep_vertex.h
src/sys_util/: gltools.cpp  gltools.h  logger.cpp  logger.h  logging.cpp  logging.h  stdafx.h  texture.cpp  texture.h  texture_helper.cpp  texture_helper.h  util.cpp  util.h
src/ui/: document.cpp  document.h  document_impl.h  ep_render.h  paralab.qrc  render_ui.cpp  render_ui.h  render_ui_state.h
src/ui/shaders/: fGL2_Phong1.frag  fGL2_contours.frag  fGL2_toons.frag  vGL2_Golden.vert  vGL2_Phong1.vert  vGL2_contours.vert  vGL2_toons.vert
